--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
    <head>
       <title>Get Direct APK from Google Play Store Tool by Harman Singh Hira</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <script type="text/javascript" src="//code.jquery.com/jquery-3.1.1.js"></script>
       <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
