--- a/index.html
+++ b/index.html
@@ -2,6 +2,30 @@
    <head>
       <title>Get Direct APK from Google Play Store Tool by Harman Singh Hira</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      
+      <meta name="description" content="Download APK and OBB data for your Android phone, tablet, watch, TV, and car. Download files directly from Google Play, Safe, and Free." />
+      <meta name="keywords" content="apk download, apk downloader, android apk download" />
+      <meta itemprop="name" content="Download APK Free - Really simple" />
+      <meta itemprop="description" content="Download APK and OBB data for your Android phone, tablet, watch, TV, and car. Download files directly from Google Play, Safe, and Free." />
+      <meta itemprop="image" content="/image.jpg" />
+      <link rel="canonical" href="https://git.hsinghhira.me/GetAPK/" />
+      <meta content="IE=10" http-equiv="X-UA-Compatible">
+      <meta property="og:locale" content="en_US" />
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="https://git.hsinghhira.me/GetAPK/" />
+      <meta property="og:site_name" content="GetAPK by Harman Singh Hira" />
+      <meta property="og:title" content="Download APK Free - Really simple" />
+      <meta property="og:description" content="Download APK and OBB data for your Android phone, tablet, watch, TV, and car. Download files directly from Google Play, Safe, and Free." />
+      <meta property="og:image" content="/image.jpg" />
+      <meta property="tag" content="download apk, apk downloader, apk download" />
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:title" content="APK Support: Download APK Free - Really simple" />
+      <meta name="twitter:description" content="Download APK and OBB data for your Android phone, tablet, watch, TV, and car. Download files directly from Google Play, Safe, and Free." />
+      <meta name="twitter:image" content="/image.jpg" />
+      <link rel="alternate" href="https://git.hsinghhira.me/GetAPK/" hreflang="x-default" />
+
+      <link rel="shortcut icon" href="https://www.iconsdb.com/icons/preview/icon-sets/web-2-orange-2/android-6-xxl.png">
+      
       <script type="text/javascript" src="//code.jquery.com/jquery-3.1.1.js"></script>
       <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
@@ -12,7 +36,7 @@
       <div class="download-box">
          <div class="down-wrap">
             <div class="static_s">
-               <h1 class="static_s_h1"><a href="/">Get Direct APK from Google Play Store</a></h1>
+               <h1 class="static_s_h1"><a href="https://git.hsinghhira.me/GetAPK/">Get Direct APK from Google Servers</a></h1>
                <p>This is a simple tool to download the APK file and it's data directly from Google Server without any need to login to Google account.</p>
                <form id="apkdownloader"  action="" method="post" autocomplete="off">
                   <div class="form-group search-form">
