--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <meta name="twitter:image" content="/image.jpg" />
       <link rel="alternate" href="https://git.hsinghhira.me/GetAPK/" hreflang="x-default" />
 
-      <link rel="shortcut icon" href="https://www.iconsdb.com/icons/preview/icon-sets/web-2-orange-2/android-6-xxl.png">
+      <link rel="shortcut icon" href="/favicon.ico">
       
       <script type="text/javascript" src="//code.jquery.com/jquery-3.1.1.js"></script>
       <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700" rel="stylesheet">
