--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                   <div id="downloader_area">
                   </div>
                </div>
-               <p>Made with ❤️️ by <a href="https://me.hsinghhira.me/" target="_blank">Harman Singh Hira</a> in New Zealand</p>
+               <p>Made with ❤️️ by <a href="https://me.hsinghhira.me/" target="_blank">Harman Singh Hira</a> in 🇳🇿 New Zealand</p>
             </div>
          </div>
       </div>
