--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
          <div class="down-wrap">
             <div class="static_s">
                <h1 class="static_s_h1"><a href="https://git.hsinghhira.me/GetAPK/">Get Direct APK from Google Servers</a></h1>
-               <p>This is a simple tool to download the APK file and it's data directly from Google Server without any need to login to Google account.</p>
+               <p>This is a simple tool to download any APK file and it's data directly from Google Server without any restrictions. Enjoy :P</p>
                <form id="apkdownloader"  action="" method="post" autocomplete="off">
                   <div class="form-group search-form">
                      <input autofocus="autofocus" title="Enter App Name, Package Name, Package ID" id="region-package" name="package" type="text" placeholder="Package Name or Google Play URL" value="" required class=" form-control"/> 
