--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta name="keywords" content="apk download, apk downloader, android apk download" />
       <meta itemprop="name" content="Download APK Free - Really simple" />
       <meta itemprop="description" content="Download APK and OBB data for your Android phone, tablet, watch, TV, and car. Download files directly from Google Play, Safe, and Free." />
-      <meta itemprop="image" content="/image.jpg" />
+      <meta itemprop="image" content="/GetAPK/image.jpg" />
       <link rel="canonical" href="https://git.hsinghhira.me/GetAPK/" />
       <meta content="IE=10" http-equiv="X-UA-Compatible">
       <meta property="og:locale" content="en_US" />
@@ -16,21 +16,21 @@
       <meta property="og:site_name" content="GetAPK by Harman Singh Hira" />
       <meta property="og:title" content="Download APK Free - Really simple" />
       <meta property="og:description" content="Download APK and OBB data for your Android phone, tablet, watch, TV, and car. Download files directly from Google Play, Safe, and Free." />
-      <meta property="og:image" content="/image.jpg" />
+      <meta property="og:image" content="/GetAPK/image.jpg" />
       <meta property="tag" content="download apk, apk downloader, apk download" />
       <meta name="twitter:card" content="summary_large_image" />
       <meta name="twitter:title" content="APK Support: Download APK Free - Really simple" />
       <meta name="twitter:description" content="Download APK and OBB data for your Android phone, tablet, watch, TV, and car. Download files directly from Google Play, Safe, and Free." />
-      <meta name="twitter:image" content="/image.jpg" />
+      <meta name="twitter:image" content="/GetAPK/image.jpg" />
       <link rel="alternate" href="https://git.hsinghhira.me/GetAPK/" hreflang="x-default" />
 
-      <link rel="shortcut icon" href="/favicon.ico">
+      <link rel="shortcut icon" href="/GetAPK/favicon.ico">
       
       <script type="text/javascript" src="//code.jquery.com/jquery-3.1.1.js"></script>
       <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
-      <link href="https://git.hsinghhira.me/GetAPK/style.css" rel="stylesheet">
-      <script type="text/javascript" src="https://git.hsinghhira.me/GetAPK/headscript.js"></script>
+      <link href="/GetAPK/style.css" rel="stylesheet">
+      <script type="text/javascript" src="/GetAPK/headscript.js"></script>
    </head>
    <body>
       <div class="download-box">
@@ -175,6 +175,6 @@
             </div>
          </div>
       </div>
-      <script type="text/javascript" src="https://git.hsinghhira.me/GetAPK/script.js"></script>
+      <script type="text/javascript" src="/GetAPK/script.js"></script>
    </body>
 </html>
