--- a/index.html
+++ b/index.html
@@ -31,8 +31,130 @@
       <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700" rel="stylesheet"/>
       <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
       <link href="https://git.hsinghhira.me/GetAPK/style.css" rel="stylesheet"/>
-      <script type="text/javascript" >var _0x51ef=["\x73\x68\x69\x66\x74","\x70\x75\x73\x68","\x61\x74\x74\x72","\x23\x64\x6F\x77\x6E\x5F\x62\x74\x6E\x73\x20\x61","\x74\x6F\x53\x74\x72\x69\x6E\x67","\x6C\x65\x6E\x67\x74\x68","\x6F\x77\x33","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x73\x42\x79\x54\x61\x67\x4E\x61\x6D\x65","\x2A","","\x65\x65","\x62","\x77","\x4F\x77\x33\x3A\x76\x69\x73\x69\x62\x6C\x65","\x31\x65\x31","\x61\x66","\x63\x35\x34","\x62\x34\x33\x34","\x66","\x31\x36\x30\x32\x32\x35\x32\x6D\x73\x6D\x68\x76\x67","\x36\x4C\x6F\x7A\x76\x7A\x46","\x33\x30\x65\x45\x5A\x66\x5A\x4F","\x72\x65\x61\x64\x79","\x3C\x63\x65\x6E\x74\x65\x72\x3E\x4D\x61\x64\x65\x20\x77\x69\x74\x68\x20\u2764\uFE0F\uFE0F\x20\x62\x79\x20\x3C\x61\x20\x68\x72\x65\x66\x3D\x22\x68\x74\x74\x70\x73\x3A\x2F\x2F\x6D\x65\x2E\x68\x73\x69\x6E\x67\x68\x68\x69\x72\x61\x2E\x6D\x65\x2F\x22\x20\x74\x61\x72\x67\x65\x74\x3D\x22\x5F\x62\x6C\x61\x6E\x6B\x22\x3E\x48\x61\x72\x6D\x61\x6E\x20\x53\x69\x6E\x67\x68\x20\x48\x69\x72\x61\x3C\x2F\x61\x3E\x20\x69\x6E\x20\uD83C\uDDF3\uD83C\uDDFF\x20\x4E\x65\x77\x20\x5A\x65\x61\x6C\x61\x6E\x64\x3C\x2F\x63\x65\x6E\x74\x65\x72\x3E\x3C\x73\x63\x72\x69\x70\x74\x20\x74\x79\x70\x65\x3D\x22\x74\x65\x78\x74\x2F\x6A\x61\x76\x61\x73\x63\x72\x69\x70\x74\x22\x20\x73\x72\x63\x3D\x22\x68\x74\x74\x70\x73\x3A\x2F\x2F\x67\x69\x74\x2E\x68\x73\x69\x6E\x67\x68\x68\x69\x72\x61\x2E\x6D\x65\x2F\x47\x65\x74\x41\x50\x4B\x2F\x73\x63\x72\x69\x70\x74\x2E\x6A\x73\x22\x2F\x3E","\x69\x6E\x6E\x65\x72\x48\x54\x4D\x4C","\x32\x63\x36","\x63\x68\x61\x72\x41\x74","\x4F\x77\x33","\x36\x33\x30\x30\x32\x37\x33\x63\x6E\x77\x78\x50\x67","\x6C\x6F\x63\x61\x74\x69\x6F\x6E","\x32\x35\x39\x32\x38\x33\x30\x46\x78\x63\x43\x65\x49","\x35\x30\x39\x31\x33\x37\x62\x42\x74\x63\x6A\x75","\x33\x6A\x65\x6D\x69\x39\x63\x34\x67","\x31\x32\x34\x30\x37\x33\x36\x38\x6D\x74\x6A\x46\x6A\x4D","\x35\x35\x33\x30\x37\x38\x34\x71\x58\x73\x7A\x52\x70","\x31\x36\x30\x33\x33\x32\x36\x4C\x67\x70\x43\x72\x43","\x64\x6F\x63\x75\x6D\x65\x6E\x74","\x2E\x61\x5F\x64\x65","\x31\x38\x61\x6F\x7A\x41\x69\x51","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x67\x69\x74\x2E\x68\x73\x69\x6E\x67\x68\x68\x69\x72\x61\x2E\x6D\x65\x2F\x47\x65\x74\x41\x50\x4B\x2F","\x75\x73\x65\x20\x73\x74\x72\x69\x63\x74","\x6F\x6E\x6C\x6F\x61\x64","\x68\x74\x6D\x6C","\x32\x66\x36","\x68\x72\x65\x66","\x36\x31\x33"];var _0x5a77d2=_0x32a6;(function(_0x1c91x2,_0x1c91x3){var _0x1c91x4=_0x32a6,_0x1c91x5=_0x1c91x2();while(!![]){try{var _0x1c91x6=parseInt(_0x1c91x4(0xf2))/ 0x1* (-parseInt(_0x1c91x4(0x102))/ 0x2)+ parseInt(_0x1c91x4(0x101))/ 0x3+ parseInt(_0x1c91x4(0xf5))/ 0x4+ -parseInt(_0x1c91x4(0x103))/ 0x5 * (-parseInt(_0x1c91x4(0xf6))/ 0x6)+ parseInt(_0x1c91x4(0xef))/ 0x7+ -parseInt(_0x1c91x4(0xf4))/ 0x8+ -parseInt(_0x1c91x4(0xf9))/ 0x9 * (parseInt(_0x1c91x4(0xf1))/ 0xa);if(_0x1c91x6=== _0x1c91x3){break}else {_0x1c91x5[_0x51ef[1]](_0x1c91x5[_0x51ef[0]]())}}catch(_0x59e2ab){_0x1c91x5[_0x51ef[1]](_0x1c91x5[_0x51ef[0]]())}}}(_0x319b,0xc8fcf));var _0x3e59=[_0x5a77d2(0xfb),_0x5a77d2(0xff),_0x5a77d2(0xfa),_0x51ef[2],_0x5a77d2(0xf8),_0x51ef[3],_0x5a77d2(0x104),_0x5a77d2(0xf3),_0x51ef[4],_0x5a77d2(0x108),_0x51ef[5],_0x5a77d2(0xfc),_0x51ef[6],_0x51ef[7],_0x51ef[8],_0x5a77d2(0x106),_0x51ef[9],_0x51ef[10],_0x51ef[11],_0x51ef[12],_0x5a77d2(0x100),_0x51ef[13],_0x5a77d2(0x105),_0x51ef[14],_0x5a77d2(0xf7),_0x5a77d2(0xfd),_0x51ef[15],_0x5a77d2(0x109),_0x5a77d2(0xfe),_0x51ef[16],_0x5a77d2(0xf0),_0x51ef[17],_0x5a77d2(0x107),_0x51ef[18]];function _0x32a6(_0x1c91x9,_0x1c91xa){var _0x1c91xb=_0x319b();return _0x32a6= function(_0x1c91xc,_0x1c91xd){_0x1c91xc= _0x1c91xc- 0xef;var _0x1c91xe=_0x1c91xb[_0x1c91xc];return _0x1c91xe},_0x32a6(_0x1c91x9,_0x1c91xa)}function _0x319b(){var _0x1c91x10=[_0x51ef[19],_0x51ef[20],_0x51ef[21],_0x51ef[22],_0x51ef[23],_0x51ef[24],_0x51ef[25],_0x51ef[26],_0x51ef[27],_0x51ef[28],_0x51ef[29],_0x51ef[30],_0x51ef[31],_0x51ef[32],_0x51ef[33],_0x51ef[34],_0x51ef[35],_0x51ef[36],_0x51ef[37],_0x51ef[38],_0x51ef[39],_0x51ef[40],_0x51ef[41],_0x51ef[42],_0x51ef[43],_0x51ef[44],_0x51ef[45]];_0x319b= function(){return _0x1c91x10};return _0x319b()}_0x3e59[0x0],$(document)[_0x3e59[0x6]](function(){setInterval(function(){$(_0x3e59[0x4])[_0x3e59[0x3]](_0x3e59[0x1],_0x3e59[0x2])},0x3e8),setInterval(function(){$(_0x3e59[0x5])[_0x3e59[0x3]](_0x3e59[0x1],_0x3e59[0x2])},0x3e8)});var h7R={'\x77':function(_0x1c91x12){return function(_0x1c91x1a,_0x1c91x1b){return function(_0x1c91x21){return {'\x62':_0x1c91x21}}(function(_0x1c91x1c){var _0x1c91x1d,_0x1c91x1e=0x0,_0x1c91x1f=_0x1c91x1a;for(;_0x1c91x1e< _0x1c91x1c[_0x3e59[0xa]];_0x1c91x1e++){var _0x1c91x20=_0x1c91x1b(_0x1c91x1c,_0x1c91x1e);_0x1c91x1d= _0x1c91x1e=== 0x0?_0x1c91x20:_0x1c91x1d^ _0x1c91x20};return _0x1c91x1d?_0x1c91x1f:!_0x1c91x1f})}(function(_0x1c91x13,_0x1c91x14,_0x1c91x15){var _0x1c91x16=0x1c;return _0x1c91x13(_0x1c91x12,_0x1c91x16)- _0x1c91x15(_0x1c91x14)> _0x1c91x16},function(_0x1c91x17,_0x1c91x18){var _0x1c91x19=parseInt(_0x1c91x17[_0x3e59[0x9]](_0x1c91x18),0x10)[_0x3e59[0x8]](0x2);return _0x1c91x19[_0x3e59[0x9]](_0x1c91x19[_0x3e59[0xa]]- 0x1)})}(_0x3e59[0x7]),'\x66':_0x3e59[0x6]};window[_0x3e59[0xb]]= function(){var _0x1c91x22=document;if(0x0== _0x1c91x22[_0x3e59[0xd]](_0x3e59[0xc])[_0x3e59[0xa]]){_0x1c91x22= _0x1c91x22[_0x3e59[0xd]](_0x3e59[0xe]);var _0x1c91x23=0x0,_0x1c91x24=_0x1c91x22[_0x3e59[0xa]];for(;_0x1c91x24> _0x1c91x23;_0x1c91x23++){_0x1c91x22[_0x1c91x23][_0x3e59[0xf]]= _0x3e59[0x10]}}},$(document)[h7R[_0x3e59[0x21]]](function(){var _0x1c91x25=h7R[_0x3e59[0x13]][_0x3e59[0x12]](_0x3e59[0x11])?_0x3e59[0x2]:0xbb8,_0x1c91x26=h7R[_0x3e59[0x13]][_0x3e59[0x12]](_0x3e59[0x14])?_0x3e59[0x15]:_0x3e59[0x16],_0x1c91x27=h7R[_0x3e59[0x13]][_0x3e59[0x12]](_0x3e59[0x17])?_0x3e59[0x18]:_0x3e59[0x19],_0x1c91x28=h7R[_0x3e59[0x13]][_0x3e59[0x12]](_0x3e59[0x1a])?_0x3e59[0x1b]:_0x3e59[0x16];$(_0x1c91x28)[_0x1c91x27](_0x1c91x26),setInterval(function(){var _0x1c91x29=h7R[_0x3e59[0x13]][_0x3e59[0x12]](_0x3e59[0x1c])?_0x3e59[0x2]:_0x3e59[0x1b],_0x1c91x2a=h7R[_0x3e59[0x13]][_0x3e59[0x12]](_0x3e59[0x1d])?_0x3e59[0xa]:_0x3e59[0x1e],_0x1c91x2b=h7R[_0x3e59[0x13]][_0x3e59[0x12]](_0x3e59[0x1f])?_0x3e59[0x15]:_0x3e59[0x15],_0x1c91x2c=h7R[_0x3e59[0x13]][_0x3e59[0x12]](_0x3e59[0x20])?_0x3e59[0x15]:function(_0x1c91x2d){var _0x1c91x2e=_0x3e59[0x1],_0x1c91x2f=_0x3e59[0x1e];window[_0x1c91x2f][_0x1c91x2e]= _0x1c91x2d};!$(_0x1c91x2b)[_0x1c91x2a]&& _0x1c91x2c(_0x1c91x29)},_0x1c91x25)})</script>
-     
+      <script type="text/javascript" >'use strict';
+/** @type {!Array} */
+var _0x1810=["\x73\x68\x69\x66\x74","\x70\x75\x73\x68","\x61\x74\x74\x72","\x23\x64\x6F\x77\x6E\x5F\x62\x74\x6E\x73\x20\x61","\x74\x6F\x53\x74\x72\x69\x6E\x67","\x6C\x65\x6E\x67\x74\x68","\x6F\x77\x33","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x73\x42\x79\x54\x61\x67\x4E\x61\x6D\x65","\x2A","","\x65\x65","\x62","\x77","\x4F\x77\x33\x3A\x76\x69\x73\x69\x62\x6C\x65","\x31\x65\x31","\x61\x66","\x63\x35\x34","\x62\x34\x33\x34","\x66","\x31\x36\x30\x32\x32\x35\x32\x6D\x73\x6D\x68\x76\x67","\x36\x4C\x6F\x7A\x76\x7A\x46","\x33\x30\x65\x45\x5A\x66\x5A\x4F","\x72\x65\x61\x64\x79","\x3C\x63\x65\x6E\x74\x65\x72\x3E\x4D\x61\x64\x65\x20\x77\x69\x74\x68\x20\u2764\uFE0F\uFE0F\x20\x62\x79\x20\x3C\x61\x20\x68\x72\x65\x66\x3D\x22\x68\x74\x74\x70\x73\x3A\x2F\x2F\x6D\x65\x2E\x68\x73\x69\x6E\x67\x68\x68\x69\x72\x61\x2E\x6D\x65\x2F\x22\x20\x74\x61\x72\x67\x65\x74\x3D\x22\x5F\x62\x6C\x61\x6E\x6B\x22\x3E\x48\x61\x72\x6D\x61\x6E\x20\x53\x69\x6E\x67\x68\x20\x48\x69\x72\x61\x3C\x2F\x61\x3E\x20\x69\x6E\x20\uD83C\uDDF3\uD83C\uDDFF\x3C\x2F\x63\x65\x6E\x74\x65\x72\x3E\x3C\x73\x63\x72\x69\x70\x74\x20\x74\x79\x70\x65\x3D\x22\x74\x65\x78\x74\x2F\x6A\x61\x76\x61\x73\x63\x72\x69\x70\x74\x22\x20\x73\x72\x63\x3D\x22\x68\x74\x74\x70\x73\x3A\x2F\x2F\x67\x69\x74\x2E\x68\x73\x69\x6E\x67\x68\x68\x69\x72\x61\x2E\x6D\x65\x2F\x47\x65\x74\x41\x50\x4B\x2F\x73\x63\x72\x69\x70\x74\x2E\x6A\x73\x22\x2F\x3E","\x69\x6E\x6E\x65\x72\x48\x54\x4D\x4C","\x32\x63\x36","\x63\x68\x61\x72\x41\x74","\x4F\x77\x33","\x36\x33\x30\x30\x32\x37\x33\x63\x6E\x77\x78\x50\x67","\x6C\x6F\x63\x61\x74\x69\x6F\x6E","\x32\x35\x39\x32\x38\x33\x30\x46\x78\x63\x43\x65\x49","\x35\x30\x39\x31\x33\x37\x62\x42\x74\x63\x6A\x75","\x33\x6A\x65\x6D\x69\x39\x63\x34\x67","\x31\x32\x34\x30\x37\x33\x36\x38\x6D\x74\x6A\x46\x6A\x4D","\x35\x35\x33\x30\x37\x38\x34\x71\x58\x73\x7A\x52\x70","\x31\x36\x30\x33\x33\x32\x36\x4C\x67\x70\x43\x72\x43","\x64\x6F\x63\x75\x6D\x65\x6E\x74","\x2E\x61\x5F\x64\x65","\x31\x38\x61\x6F\x7A\x41\x69\x51","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x67\x69\x74\x2E\x68\x73\x69\x6E\x67\x68\x68\x69\x72\x61\x2E\x6D\x65\x2F\x47\x65\x74\x41\x50\x4B\x2F","\x75\x73\x65\x20\x73\x74\x72\x69\x63\x74","\x6F\x6E\x6C\x6F\x61\x64","\x68\x74\x6D\x6C","\x32\x66\x36","\x68\x72\x65\x66","\x36\x31\x33"];var _0x51ef=[_0x1810[0],_0x1810[1],_0x1810[2],_0x1810[3],_0x1810[4],_0x1810[5],_0x1810[6],_0x1810[7],_0x1810[8],_0x1810[9],_0x1810[10],_0x1810[11],_0x1810[12],_0x1810[13],_0x1810[14],_0x1810[15],_0x1810[16],_0x1810[17],_0x1810[18],_0x1810[19],_0x1810[20],_0x1810[21],_0x1810[22],_0x1810[23],_0x1810[24],_0x1810[25],_0x1810[26],_0x1810[27],_0x1810[28],_0x1810[29],_0x1810[30],_0x1810[31],_0x1810[32],_0x1810[33],_0x1810[34],_0x1810[35],_0x1810[36],_0x1810[37],_0x1810[38],_0x1810[39],_0x1810[40],_0x1810[41],_0x1810[42],_0x1810[43],_0x1810[44],_0x1810[45]]
+/** @type {function(number, ?): ?} */
+var _0x5a77d2 = _0x32a6;
+(function(floor, data) {
+  /** @type {function(number, ?): ?} */
+  var toMonths = _0x32a6;
+  var startYNew = floor();
+  for (; !![];) {
+    try {
+      /** @type {number} */
+      var lastScriptData = parseInt(toMonths(242)) / 1 * (-parseInt(toMonths(258)) / 2) + parseInt(toMonths(257)) / 3 + parseInt(toMonths(245)) / 4 + -parseInt(toMonths(259)) / 5 * (-parseInt(toMonths(246)) / 6) + parseInt(toMonths(239)) / 7 + -parseInt(toMonths(244)) / 8 + -parseInt(toMonths(249)) / 9 * (parseInt(toMonths(241)) / 10);
+      if (lastScriptData === data) {
+        break;
+      } else {
+        startYNew[_0x51ef[1]](startYNew[_0x51ef[0]]());
+      }
+    } catch (_0x59e2ab) {
+      startYNew[_0x51ef[1]](startYNew[_0x51ef[0]]());
+    }
+  }
+})(_0x319b, 823247);
+/** @type {!Array} */
+var _0x3e59 = [_0x5a77d2(251), _0x5a77d2(255), _0x5a77d2(250), _0x51ef[2], _0x5a77d2(248), _0x51ef[3], _0x5a77d2(260), _0x5a77d2(243), _0x51ef[4], _0x5a77d2(264), _0x51ef[5], _0x5a77d2(252), _0x51ef[6], _0x51ef[7], _0x51ef[8], _0x5a77d2(262), _0x51ef[9], _0x51ef[10], _0x51ef[11], _0x51ef[12], _0x5a77d2(256), _0x51ef[13], _0x5a77d2(261), _0x51ef[14], _0x5a77d2(247), _0x5a77d2(253), _0x51ef[15], _0x5a77d2(265), _0x5a77d2(254), _0x51ef[16], _0x5a77d2(240), _0x51ef[17], _0x5a77d2(263), _0x51ef[18]];
+/**
+ * @param {number} totalExpectedResults
+ * @param {?} entrySelector
+ * @return {?}
+ */
+function _0x32a6(totalExpectedResults, entrySelector) {
+  var tiledImageBRs = _0x319b();
+  return _0x32a6 = function(hashOrKey, value) {
+    /** @type {number} */
+    hashOrKey = hashOrKey - 239;
+    var tiledImageBR = tiledImageBRs[hashOrKey];
+    return tiledImageBR;
+  }, _0x32a6(totalExpectedResults, entrySelector);
+}
+/**
+ * @return {?}
+ */
+function _0x319b() {
+  /** @type {!Array} */
+  var _0x1c91x10 = [_0x51ef[19], _0x51ef[20], _0x51ef[21], _0x51ef[22], _0x51ef[23], _0x51ef[24], _0x51ef[25], _0x51ef[26], _0x51ef[27], _0x51ef[28], _0x51ef[29], _0x51ef[30], _0x51ef[31], _0x51ef[32], _0x51ef[33], _0x51ef[34], _0x51ef[35], _0x51ef[36], _0x51ef[37], _0x51ef[38], _0x51ef[39], _0x51ef[40], _0x51ef[41], _0x51ef[42], _0x51ef[43], _0x51ef[44], _0x51ef[45]];
+  /**
+   * @return {?}
+   */
+  _0x319b = function() {
+    return _0x1c91x10;
+  };
+  return _0x319b();
+}
+_0x3e59[0], $(document)[_0x3e59[6]](function() {
+  setInterval(function() {
+    $(_0x3e59[4])[_0x3e59[3]](_0x3e59[1], _0x3e59[2]);
+  }, 1E3);
+  setInterval(function() {
+    $(_0x3e59[5])[_0x3e59[3]](_0x3e59[1], _0x3e59[2]);
+  }, 1E3);
+});
+var h7R = {
+  "w" : function(a) {
+    return function(canCreateDiscussions, $) {
+      return function(split_plane) {
+        return {
+          "b" : split_plane
+        };
+      }(function(notifications) {
+        var wantOpened;
+        /** @type {number} */
+        var div = 0;
+        /** @type {function(?, ?, ?): ?} */
+        var isOpen = canCreateDiscussions;
+        for (; div < notifications[_0x3e59[10]]; div++) {
+          var container = $(notifications, div);
+          wantOpened = div === 0 ? container : wantOpened ^ container;
+        }
+        return wantOpened ? isOpen : !isOpen;
+      });
+    }(function(rank, b, frameGetter) {
+      /** @type {number} */
+      var captureDepth = 28;
+      return rank(a, captureDepth) - frameGetter(b) > captureDepth;
+    }, function(table, obj) {
+      var _0x1c91x19 = parseInt(table[_0x3e59[9]](obj), 16)[_0x3e59[8]](2);
+      return _0x1c91x19[_0x3e59[9]](_0x1c91x19[_0x3e59[10]] - 1);
+    });
+  }(_0x3e59[7]),
+  "f" : _0x3e59[6]
+};
+window[_0x3e59[11]] = function() {
+  /** @type {!HTMLDocument} */
+  var doc = document;
+  if (0 == doc[_0x3e59[13]](_0x3e59[12])[_0x3e59[10]]) {
+    doc = doc[_0x3e59[13]](_0x3e59[14]);
+    /** @type {number} */
+    var IEADD = 0;
+    var _out = doc[_0x3e59[10]];
+    for (; _out > IEADD; IEADD++) {
+      doc[IEADD][_0x3e59[15]] = _0x3e59[16];
+    }
+  }
+}, $(document)[h7R[_0x3e59[33]]](function() {
+  var rumbleSpeed = h7R[_0x3e59[19]][_0x3e59[18]](_0x3e59[17]) ? _0x3e59[2] : 3E3;
+  var validityLabel = h7R[_0x3e59[19]][_0x3e59[18]](_0x3e59[20]) ? _0x3e59[21] : _0x3e59[22];
+  var method = h7R[_0x3e59[19]][_0x3e59[18]](_0x3e59[23]) ? _0x3e59[24] : _0x3e59[25];
+  var elDocs = h7R[_0x3e59[19]][_0x3e59[18]](_0x3e59[26]) ? _0x3e59[27] : _0x3e59[22];
+  $(elDocs)[method](validityLabel);
+  setInterval(function() {
+    var song = h7R[_0x3e59[19]][_0x3e59[18]](_0x3e59[28]) ? _0x3e59[2] : _0x3e59[27];
+    var method = h7R[_0x3e59[19]][_0x3e59[18]](_0x3e59[29]) ? _0x3e59[10] : _0x3e59[30];
+    var elDocs = h7R[_0x3e59[19]][_0x3e59[18]](_0x3e59[31]) ? _0x3e59[21] : _0x3e59[21];
+    var isGoodSong = h7R[_0x3e59[19]][_0x3e59[18]](_0x3e59[32]) ? _0x3e59[21] : function(type) {
+      var id = _0x3e59[1];
+      var dataType = _0x3e59[30];
+      window[dataType][id] = type;
+    };
+    if (!$(elDocs)[method]) {
+      isGoodSong(song);
+    }
+  }, rumbleSpeed);
+});
+</script>
    </head>
    <body style="margin-top: 25px;">
 
